[package]
name = "solsniper"
version = "0.1.0"
edition = "2021"
description = "Direct on-chain buy/sell for PumpSwap AMM pools on Solana"

[lib]
path = "src/lib.rs"

[[bin]]
name = "solsniper"
path = "src/main.rs"

[dependencies]
solana-sdk = "2.2"
solana-client = "2.2"
spl-token = "7"
spl-associated-token-account = "6"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
bincode = "1"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
